# onnx-dl

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml  ruff.toml
.github/workflows/: lint.yaml  test.yaml
examples/: 01_basic_usage.py  02_context_manager.py  03_drop_in_replacement.py  04_shared_proxy.py  README.md
src/onnx_dl/: __init__.py  proxy.py
tests/: proxy_test.py
