[project]
name = "onnx-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fedir Zadniprovskyi", email = "github.g1k56@simplelogin.com" }
]
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.23.2",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
]
lint = [
  "ruff>=0.14.4",
  "basedpyright>=1.33.0",
]
test = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"


[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = "none"
reportUnannotatedClassAttribute = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportAny = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
